--- a/mcsplashes/index.html
+++ b/mcsplashes/index.html
@@ -5,7 +5,7 @@
 		<title>Minecraft Splash with CSS3!</title>
 		
 		<!--css-->
-		<link rel="stylesheet" href="./css/style.css" type="text/css">
+		<link rel="stylesheet" href="css/style.css" type="text/css">
 	</head>
 	
 	<body style="background:#BBBBBB;">
